--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/freenab.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Holy Bible - NAB</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/freenab.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>The Holy Bible - NAB</title>
+  <meta name="description"
+    content="FreeNAB is an open-source Bible reader for the New American Bible (NAB) translation. Built with Node.js, React, and Vite, it offers a fast and modern interface for reading and studying the Bible." />
+  <meta name="keywords"
+    content="Bible, NAB, New American Bible, FreeNAB, Scripture, Open Source, React, Vite, Node.js" />
+  <meta name="author" content="FreeNAB Contributors" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="The Holy Bible - NAB" />
+  <meta property="og:description"
+    content="An open-source Bible reader for the New American Bible (NAB) translation, built with React, Vite, and Node.js." />
+  <meta property="og:image" content="/freenab.svg" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="The Holy Bible - NAB" />
+  <meta name="twitter:description"
+    content="An open-source Bible reader for the NAB translation, built with modern web technologies." />
+  <meta name="twitter:image" content="/freenab.svg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/freenab.svg" type="image/svg+xml" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
